if not meson.is_subproject()
  install_headers(
    files(
      'name_map.h',
      'optional_ref.h',
      'parsing_error.h',
      'slotted_vector.h',
      'substr_info.h',
      'parser.h',
      'syntax_tree.h',
      'token.h',
      'utils.h',
    ),
    subdir: 'zecalculator',
    preserve_path: true
  )
endif
